# adventofcode

./: .gitignore  README.md
2015/day01/georg/: 01_a.py
2019/day01/: CMakeLists.txt  main.cpp
2019/day01/include/: puzzle.h
2019/day01/src/: puzzle.cpp
2019/day02/: CMakeLists.txt  main.cpp
2019/day02/include/: ProgramAlarm.h
2019/day02/src/: ProgramAlarm.cpp
2021/day00/georg/: example.txt  grid_search.py  hello_aoc.py  template.py
2021/day01/georg/: a.py  b.py
2021/day01/ludwig/: day01.py  day01_1.py  day01_2.py
2021/day02/georg/: a.py  b.py
2021/day02/ludwig/: day02_1.py  day02_2.py
2021/day03/georg/: a.py  b.py
2021/day03/ludwig/: day03_1.py  day03_2.py
2021/day04/georg/: a.py  b.py
2021/day04/ludwig/: day04_1.py  day04_2.py
2021/day05/georg/: hydro_venture.py
2021/day05/ludwig/: day05_1.py  day05_2.py
2021/day06/georg/: lanternfish.py
2021/day06/ludwig/: a.py  b.py
2021/day07/georg/: treachery_of_whales.py
2021/day07/ludwig/: a.py  b.py
2021/day08/georg/: seven_seg_search.py
2021/day08/ludwig/: a.py  b.py
2021/day09/georg/: smoke_basin.py
2021/day09/ludwig/: a.py  b.py
2021/day10/georg/: day10.py  syntax_scoring.py
2021/day10/ludwig/: a.py  b.py
2021/day11/georg/: dumbo_octopus.py
2021/day11/ludwig/: a.py  b.py
2021/day12/georg/: passage_pathing.py
2021/day12/ludwig/: a.py  b.py
2021/day13/georg/: transparant_origami.py
2021/day13/ludwig/: a.py  b.py
2021/day14/georg/: extended_polymerization.py
2021/day14/ludwig/: a.py  b.py
2021/day15/georg/: chiton.py
2021/day15/ludwig/: a.py  b.py
(+13 files in other folders)
